--- a/carzone/templates/cars/car_detail.html
+++ b/carzone/templates/cars/car_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load humanize %}
 
+{% block title %}| {{single_car.car_title | title}}{% endblock title %}
+
 {% block content %}
 
 <!-- Sub banner start -->
