--- a/carzone/templates/page/about.html
+++ b/carzone/templates/page/about.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}| About Us{% endblock title %}
+
 {% block content %}
 
 <!-- Sub banner start -->
