--- a/carzone/templates/page/contact.html
+++ b/carzone/templates/page/contact.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}| Content Us{% endblock title %}
+
 {% block content %}
 <!-- Sub banner start -->
 <div class="sub-banner overview-bgi">
