Login with Google & Facebook

--- a/carzone/templates/page/home.html
+++ b/carzone/templates/page/home.html
@@ -7,6 +7,7 @@
 <!-- Main header end -->
 {% block content %}
 <!-- Banner start -->
+{% comment %} {% include 'includes/messages.html' %} {% endcomment %}
 <div class="banner" id="banner">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner banner-slider-inner text-center">
